--- a/3-dom/3-dom.html
+++ b/3-dom/3-dom.html
@@ -7,13 +7,14 @@
     <title>DOM, événements et JQuery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <style>
-        .summary {
-            font-size: 1rem;
-            font-weight: bold;
-        }
         .paragraph {
             font-size: .9rem;
             color: rgba(0, 0, 0, 0.8);
+        }
+
+        .summary {
+            font-size: 1rem;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -83,5 +84,8 @@
 <footer class="container">
     Un examen pour Human Booster - Formation DWWM
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="3-dom.js"></script>
 </body>
 </html>
