--- a/5-poo/5-poo.html
+++ b/5-poo/5-poo.html
@@ -8,5 +8,8 @@
 </head>
 <body>
 
+<script src="classes/Product.js"></script>
+<script src="classes/Cart.js"></script>
+<script src="5-poo.js"></script>
 </body>
 </html>
